feat: add logout buttons + prevent admin self-ban/suspend

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -152,6 +152,7 @@ table{font-size:.75rem}th,td{padding:.5rem .5rem}
     <div class="side-foot">
       <div class="um"><div class="ua" id="sAvatar">A</div><div class="ui"><div class="n" id="sName">Admin</div><div class="r" data-i18n="admin">管理员</div></div></div>
       <div class="lt" id="langToggle"><span class="on" data-l="zh">中文</span><span data-l="en">EN</span></div>
+      <button onclick="doLogout()" style="width:100%;padding:8px;margin-top:8px;border:1px solid #e74c3c;border-radius:8px;background:white;color:#e74c3c;font-size:13px;font-weight:600;cursor:pointer" data-i18n="logout">退出登录</button>
     </div>
   </aside>
 
