fix: logout统一回到index.html入口

--- a/frontend/merchant.html
+++ b/frontend/merchant.html
@@ -3016,7 +3016,8 @@
         // 重置 createStoreSection 为隐藏状态
         document.getElementById('createStoreSection').style.display = 'none';
         toast(t('logout_success'), 'info');
-        showLoginPage();
+        // 统一退出到首页
+        window.location.href = 'index.html';
     }
 
     /* ===== Merchant ===== */
